--- a/css/app.css
+++ b/css/app.css
@@ -6,3 +6,23 @@
 .bootstrap-switch{
 	margin-right: 40px;
 }
+
+.response-row {
+	margin-left: 20px;
+	margin-right: 10px;
+	margin-bottom: 10px;
+	padding-bottom: 10px;
+	box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.75);
+}
+
+tr[role=row] {
+	cursor: pointer;
+}
+
+td.buttontd {
+	cursor: auto;
+}
+
+tbody tr[role=row]:hover {
+	background-color: #EEEEEE;
+}
