--- a/css/app.css
+++ b/css/app.css
@@ -11,7 +11,7 @@
 	margin-left: 20px;
 	margin-right: 10px;
 	margin-bottom: 10px;
-	padding-bottom: 10px;
+	padding: 10px;
 	box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.75);
 }
 
